--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -10,6 +10,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName_okgo
+
+        flavorDimensions "versionCode"
     }
 
     signingConfigs {
@@ -56,6 +58,11 @@ android {
         exclude 'META-INF/license.txt'
         exclude 'META-INF/rxjava.properties'
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 task makeApk {
@@ -73,29 +80,31 @@ task makeApk {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile "com.android.support:appcompat-v7:$supportVersion"
-    compile "com.android.support:design:$supportVersion"
-    compile "com.android.support:recyclerview-v7:$supportVersion"
-    compile "com.android.support:cardview-v7:$supportVersion"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "com.android.support:appcompat-v7:$supportVersion"
+    implementation "com.android.support:design:$supportVersion"
+    implementation "com.android.support:recyclerview-v7:$supportVersion"
+    implementation "com.android.support:cardview-v7:$supportVersion"
 
-    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.0.7'
-    compile 'com.github.bumptech.glide:glide:3.7.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.code.gson:gson:2.8.0'
-    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    compile 'com.readystatesoftware.chuck:library:1.0.4'
+    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:v2.0.7'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'com.jakewharton:butterknife:7.0.1'
+    annotationProcessor 'com.jakewharton:butterknife:7.0.1'
 
-    compile project(':okgo')
-    compile project(':okrx')
-    compile project(':okrx2')
-    compile project(':okserver')
+    implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+    implementation 'com.readystatesoftware.chuck:library:1.0.4'
+
+    implementation project(':okgo')
+    implementation project(':okrx')
+    implementation project(':okrx2')
+    implementation project(':okserver')
 //    compile 'com.lzy.net:okgo:3.0.4'
 //    compile 'com.lzy.net:okrx:1.0.2'
 //    compile 'com.lzy.net:okrx2:2.0.2'
 //    compile 'com.lzy.net:okserver:2.0.5'
-    compile 'com.lzy.widget:ninegridview:0.2.1'
-    compile 'com.lzy.widget:imagepicker:0.3.2'
-    compile 'com.lzy.widget:view-core:0.2.1'
+    implementation 'com.lzy.widget:ninegridview:0.2.1'
+    implementation 'com.lzy.widget:imagepicker:0.3.2'
+    implementation 'com.lzy.widget:view-core:0.2.1'
 }
