--- a/okrx2/build.gradle
+++ b/okrx2/build.gradle
@@ -13,10 +13,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
 //    compile "com.lzy.net:okgo:$versionName_okgo"
-    compile project(':okgo')
+    implementation project(':okgo')
 }
 
 //apply from: 'bintray.gradle'
