--- a/okserver/build.gradle
+++ b/okserver/build.gradle
@@ -13,9 +13,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
 //    compile "com.lzy.net:okgo:$versionName_okgo"
-    compile project(':okgo')
+    implementation 'com.squareup.okhttp3:okhttp:3.14.0'
+    implementation project(':okgo')
 }
 
 //apply from: 'bintray.gradle'
